<resources>
    <string name="app_name">Turnip</string>
    <string name="action_settings">Settings</string>
    <string name="turnipName">Turnip</string>
    <string name="loginWithFacebook">Login with Facebook</string>
    <string name="loginWithEmail">Login with email</string>
    <string name="signUp">Sign Up</string>
    <string name="noAccountSignUp">Don\'t have an account? Sign up</string>
    <string name="turnipForWhat">(for what?)</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="signIn">Sign In</string>
    <string name="logIn">Log In</string>
    <string name="title_activity_settings">Settings</string>
    <string name="facebook_app_id">1106534239396790</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_toggle">ToggleActivity</string>
    <string name="notReadyTurnip">Not ready to turn up</string>
    <string name="readyTurnip">🔥🔥🔥for the next 6 hours</string>
    <string name="title_activity_settings_page">SettingsPageActivity</string>
    <string name="settingsTitle">Settings</string>
    <string name="privacySettings">Privacy Settings</string>
    <string name="title_activity_settings_main">SettingsMainActivity</string>
    <string name="settingsMain">Settings</string>
    <string name="loginError">Incorrect email or password</string>
    <string name="couldNotLogIn">Could not log in</string>
    <string name="okay">Okay</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_web_view_chat">WebViewChat</string>
    <string name="title_activity_web_chat">WebChat</string>
    <string name="title_activity_friend_request">FriendRequestActivity</string>
    <string name="title_activity_user_profile">UserProfile</string>
</resources>
