<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="turnip.turnip.SignUpActivity"
    android:background="@color/turnipPurple"
    tools:showIn="@layout/activity_sign_up">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turnipName"
        android:id="@+id/textView4"
        android:textColor="#FFFFFF"
        android:textSize="70sp"
        android:textStyle="bold"
        android:layout_marginTop="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turnipForWhat"
        android:id="@+id/textView5"
        android:textColor="@color/white"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:textSize="15sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail"
        android:background="@color/white"
        android:hint="@string/email"
        android:layout_above="@+id/txtName"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtName"
        android:background="@color/white"
        android:hint="@string/name"
        android:layout_above="@+id/txtPassword"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:background="@color/white"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/signUpButton"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:id="@+id/signUpButton"
        android:background="@color/white"
        android:textColor="#826885"
        android:padding="20dp"
        android:layout_marginBottom="75dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />
</RelativeLayout>
